// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleForm /> Blur field: actions history 1`] = `
"@@react-redux-form-lite/BLUR
 meta: {form: 'simple', field: 'firstName'}"
`;

exports[`<SimpleForm /> Blur field: store 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": true,
    "changed": true,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "employed": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "favoriteColor": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": true,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "notes": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "sex": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "employed": undefined,
    "favoriteColor": undefined,
    "firstName": "test",
    "lastName": undefined,
    "notes": undefined,
    "sex": undefined,
  },
}
`;

exports[`<SimpleForm /> Change field: actions history. 1`] = `
"@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'firstName'}
 payload: {value: 't'},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'firstName'}
 payload: {value: 'te'},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'firstName'}
 payload: {value: 'tes'},
@@react-redux-form-lite/CHANGE
 meta: {form: 'simple', field: 'firstName'}
 payload: {value: 'test'}"
`;

exports[`<SimpleForm /> Changed field: store 1`] = `
Object {
  "form": Object {
    "activeField": "firstName",
    "blurred": false,
    "changed": true,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "employed": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "favoriteColor": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": true,
      "blurred": false,
      "changed": true,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "notes": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "sex": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "employed": undefined,
    "favoriteColor": undefined,
    "firstName": "test",
    "lastName": undefined,
    "notes": undefined,
    "sex": undefined,
  },
}
`;

exports[`<SimpleForm /> Focus field: actions history. 1`] = `
Array [
  Object {
    "meta": Object {
      "field": "firstName",
      "form": "simple",
    },
    "type": "@@react-redux-form-lite/FOCUS",
  },
]
`;

exports[`<SimpleForm /> Focus field: store 1`] = `
Object {
  "form": Object {
    "activeField": "firstName",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": true,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "employed": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "favoriteColor": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": true,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": true,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "notes": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "sex": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "employed": undefined,
    "favoriteColor": undefined,
    "firstName": undefined,
    "lastName": undefined,
    "notes": undefined,
    "sex": undefined,
  },
}
`;

exports[`<SimpleForm /> Register form and fields: store. 1`] = `
Object {
  "form": Object {
    "activeField": "",
    "blurred": false,
    "changed": false,
    "errorsMap": Object {},
    "focused": false,
    "hasErrors": false,
    "hasWarnings": false,
    "submitted": false,
    "warningsMap": Object {},
  },
  "meta": Object {
    "email": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "employed": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "favoriteColor": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "firstName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "lastName": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "notes": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
    "sex": Object {
      "active": false,
      "blurred": false,
      "changed": false,
      "error": "",
      "focused": false,
      "warning": "",
    },
  },
  "values": Object {
    "email": undefined,
    "employed": undefined,
    "favoriteColor": undefined,
    "firstName": undefined,
    "lastName": undefined,
    "notes": undefined,
    "sex": undefined,
  },
}
`;

exports[`<SimpleForm /> Render simple form. 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(ReduxForm)>
    <ReduxForm
      actions={
        Object {
          "arrayPush": [Function],
          "blur": [Function],
          "change": [Function],
          "changeSubmitted": [Function],
          "focus": [Function],
          "registerField": [Function],
          "registerForm": [Function],
          "removeField": [Function],
          "removeForm": [Function],
          "resetForm": [Function],
          "setInitialValues": [Function],
          "updateFormState": [Function],
          "updateValidateAndWarningMessages": [Function],
          "updateValidateMessage": [Function],
          "updateValidateMessages": [Function],
          "updateWarningMessage": [Function],
          "updateWarningMessages": [Function],
        }
      }
      formState={
        Object {
          "form": Object {
            "activeField": "",
            "blurred": false,
            "changed": false,
            "errorsMap": Object {},
            "focused": false,
            "hasErrors": false,
            "hasWarnings": false,
            "submitted": false,
            "warningsMap": Object {},
          },
          "meta": Object {
            "email": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
            "employed": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
            "favoriteColor": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
            "firstName": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
            "lastName": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
            "notes": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
            "sex": Object {
              "active": false,
              "blurred": false,
              "changed": false,
              "error": "",
              "focused": false,
              "warning": "",
            },
          },
          "values": Object {
            "email": undefined,
            "employed": undefined,
            "favoriteColor": undefined,
            "firstName": undefined,
            "lastName": undefined,
            "notes": undefined,
            "sex": undefined,
          },
        }
      }
      ownProps={
        Object {
          "onSubmit": undefined,
        }
      }
    >
      <ReduxFormClass
        actions={
          Object {
            "arrayPush": [Function],
            "blur": [Function],
            "change": [Function],
            "changeSubmitted": [Function],
            "focus": [Function],
            "registerField": [Function],
            "registerForm": [Function],
            "removeField": [Function],
            "removeForm": [Function],
            "resetForm": [Function],
            "setInitialValues": [Function],
            "updateFormState": [Function],
            "updateValidateAndWarningMessages": [Function],
            "updateValidateMessage": [Function],
            "updateValidateMessages": [Function],
            "updateWarningMessage": [Function],
            "updateWarningMessages": [Function],
          }
        }
        formState={
          Object {
            "form": Object {
              "activeField": "",
              "blurred": false,
              "changed": false,
              "errorsMap": Object {},
              "focused": false,
              "hasErrors": false,
              "hasWarnings": false,
              "submitted": false,
              "warningsMap": Object {},
            },
            "meta": Object {
              "email": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
              "employed": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
              "favoriteColor": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
              "firstName": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
              "lastName": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
              "notes": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
              "sex": Object {
                "active": false,
                "blurred": false,
                "changed": false,
                "error": "",
                "focused": false,
                "warning": "",
              },
            },
            "values": Object {
              "email": undefined,
              "employed": undefined,
              "favoriteColor": undefined,
              "firstName": undefined,
              "lastName": undefined,
              "notes": undefined,
              "sex": undefined,
            },
          }
        }
        ownProps={
          Object {
            "onSubmit": undefined,
          }
        }
        store={
          Object {
            "dispatch": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
            Symbol(observable): [Function],
          }
        }
      >
        <SimpleForm
          formActions={
            Object {
              "arrayPush": [Function],
              "blur": [Function],
              "change": [Function],
              "changeSubmitted": [Function],
              "focus": [Function],
              "registerField": [Function],
              "registerForm": [Function],
              "removeField": [Function],
              "removeForm": [Function],
              "resetForm": [Function],
              "setInitialValues": [Function],
              "updateFormState": [Function],
              "updateValidateAndWarningMessages": [Function],
              "updateValidateMessage": [Function],
              "updateValidateMessages": [Function],
              "updateWarningMessage": [Function],
              "updateWarningMessages": [Function],
            }
          }
          formParams={
            Object {
              "destroyOnUnmount": true,
              "form": "simple",
            }
          }
          formState={
            Object {
              "form": Object {
                "activeField": "",
                "blurred": false,
                "changed": false,
                "errorsMap": Object {},
                "focused": false,
                "hasErrors": false,
                "hasWarnings": false,
                "submitted": false,
                "warningsMap": Object {},
              },
              "meta": Object {
                "email": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
                "employed": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
                "favoriteColor": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
                "firstName": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
                "lastName": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
                "notes": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
                "sex": Object {
                  "active": false,
                  "blurred": false,
                  "changed": false,
                  "error": "",
                  "focused": false,
                  "warning": "",
                },
              },
              "values": Object {
                "email": undefined,
                "employed": undefined,
                "favoriteColor": undefined,
                "firstName": undefined,
                "lastName": undefined,
                "notes": undefined,
                "sex": undefined,
              },
            }
          }
          handleSubmit={[Function]}
        >
          <form
            onSubmit={[Function]}
          >
            <div>
              <label>
                First Name
              </label>
              <div>
                <FieldWithContext
                  component="input"
                  name="firstName"
                  placeholder="First Name"
                  type="text"
                >
                  <Connect(Field)
                    component="input"
                    fieldArrayContext={Object {}}
                    formContext={
                      Object {
                        "destroyOnUnmount": true,
                        "form": "simple",
                        "updateValidateAndWarnMap": [Function],
                      }
                    }
                    formSectionContext={
                      Object {
                        "name": "",
                      }
                    }
                    name="firstName"
                    placeholder="First Name"
                    type="text"
                  >
                    <Field
                      actions={
                        Object {
                          "arrayPush": [Function],
                          "blur": [Function],
                          "change": [Function],
                          "changeSubmitted": [Function],
                          "focus": [Function],
                          "registerField": [Function],
                          "registerForm": [Function],
                          "removeField": [Function],
                          "removeForm": [Function],
                          "resetForm": [Function],
                          "setInitialValues": [Function],
                          "updateFormState": [Function],
                          "updateValidateAndWarningMessages": [Function],
                          "updateValidateMessage": [Function],
                          "updateValidateMessages": [Function],
                          "updateWarningMessage": [Function],
                          "updateWarningMessages": [Function],
                        }
                      }
                      component="input"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      formState={
                        Object {
                          "form": Object {
                            "activeField": "",
                            "blurred": false,
                            "changed": false,
                            "errorsMap": Object {},
                            "focused": false,
                            "hasErrors": false,
                            "hasWarnings": false,
                            "submitted": false,
                            "warningsMap": Object {},
                          },
                          "meta": Object {
                            "email": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "employed": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "favoriteColor": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "firstName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "lastName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "notes": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "sex": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                          },
                          "values": Object {
                            "email": undefined,
                            "employed": undefined,
                            "favoriteColor": undefined,
                            "firstName": undefined,
                            "lastName": undefined,
                            "notes": undefined,
                            "sex": undefined,
                          },
                        }
                      }
                      name="firstName"
                      ownProps={
                        Object {
                          "name": "firstName",
                          "placeholder": "First Name",
                          "type": "text",
                        }
                      }
                    >
                      <input
                        name="firstName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="First Name"
                        type="text"
                        value=""
                      />
                    </Field>
                  </Connect(Field)>
                </FieldWithContext>
              </div>
            </div>
            <div>
              <label>
                Last Name
              </label>
              <div>
                <FieldWithContext
                  component="input"
                  name="lastName"
                  placeholder="Last Name"
                  type="text"
                >
                  <Connect(Field)
                    component="input"
                    fieldArrayContext={Object {}}
                    formContext={
                      Object {
                        "destroyOnUnmount": true,
                        "form": "simple",
                        "updateValidateAndWarnMap": [Function],
                      }
                    }
                    formSectionContext={
                      Object {
                        "name": "",
                      }
                    }
                    name="lastName"
                    placeholder="Last Name"
                    type="text"
                  >
                    <Field
                      actions={
                        Object {
                          "arrayPush": [Function],
                          "blur": [Function],
                          "change": [Function],
                          "changeSubmitted": [Function],
                          "focus": [Function],
                          "registerField": [Function],
                          "registerForm": [Function],
                          "removeField": [Function],
                          "removeForm": [Function],
                          "resetForm": [Function],
                          "setInitialValues": [Function],
                          "updateFormState": [Function],
                          "updateValidateAndWarningMessages": [Function],
                          "updateValidateMessage": [Function],
                          "updateValidateMessages": [Function],
                          "updateWarningMessage": [Function],
                          "updateWarningMessages": [Function],
                        }
                      }
                      component="input"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      formState={
                        Object {
                          "form": Object {
                            "activeField": "",
                            "blurred": false,
                            "changed": false,
                            "errorsMap": Object {},
                            "focused": false,
                            "hasErrors": false,
                            "hasWarnings": false,
                            "submitted": false,
                            "warningsMap": Object {},
                          },
                          "meta": Object {
                            "email": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "employed": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "favoriteColor": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "firstName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "lastName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "notes": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "sex": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                          },
                          "values": Object {
                            "email": undefined,
                            "employed": undefined,
                            "favoriteColor": undefined,
                            "firstName": undefined,
                            "lastName": undefined,
                            "notes": undefined,
                            "sex": undefined,
                          },
                        }
                      }
                      name="lastName"
                      ownProps={
                        Object {
                          "name": "lastName",
                          "placeholder": "Last Name",
                          "type": "text",
                        }
                      }
                    >
                      <input
                        name="lastName"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Last Name"
                        type="text"
                        value=""
                      />
                    </Field>
                  </Connect(Field)>
                </FieldWithContext>
              </div>
            </div>
            <div>
              <label>
                Email
              </label>
              <div>
                <FieldWithContext
                  component="input"
                  name="email"
                  placeholder="Email"
                  type="email"
                >
                  <Connect(Field)
                    component="input"
                    fieldArrayContext={Object {}}
                    formContext={
                      Object {
                        "destroyOnUnmount": true,
                        "form": "simple",
                        "updateValidateAndWarnMap": [Function],
                      }
                    }
                    formSectionContext={
                      Object {
                        "name": "",
                      }
                    }
                    name="email"
                    placeholder="Email"
                    type="email"
                  >
                    <Field
                      actions={
                        Object {
                          "arrayPush": [Function],
                          "blur": [Function],
                          "change": [Function],
                          "changeSubmitted": [Function],
                          "focus": [Function],
                          "registerField": [Function],
                          "registerForm": [Function],
                          "removeField": [Function],
                          "removeForm": [Function],
                          "resetForm": [Function],
                          "setInitialValues": [Function],
                          "updateFormState": [Function],
                          "updateValidateAndWarningMessages": [Function],
                          "updateValidateMessage": [Function],
                          "updateValidateMessages": [Function],
                          "updateWarningMessage": [Function],
                          "updateWarningMessages": [Function],
                        }
                      }
                      component="input"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      formState={
                        Object {
                          "form": Object {
                            "activeField": "",
                            "blurred": false,
                            "changed": false,
                            "errorsMap": Object {},
                            "focused": false,
                            "hasErrors": false,
                            "hasWarnings": false,
                            "submitted": false,
                            "warningsMap": Object {},
                          },
                          "meta": Object {
                            "email": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "employed": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "favoriteColor": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "firstName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "lastName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "notes": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "sex": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                          },
                          "values": Object {
                            "email": undefined,
                            "employed": undefined,
                            "favoriteColor": undefined,
                            "firstName": undefined,
                            "lastName": undefined,
                            "notes": undefined,
                            "sex": undefined,
                          },
                        }
                      }
                      name="email"
                      ownProps={
                        Object {
                          "name": "email",
                          "placeholder": "Email",
                          "type": "email",
                        }
                      }
                    >
                      <input
                        name="email"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder="Email"
                        type="email"
                        value=""
                      />
                    </Field>
                  </Connect(Field)>
                </FieldWithContext>
              </div>
            </div>
            <div>
              <label>
                Sex
              </label>
              <div>
                <label>
                  <FieldWithContext
                    component="input"
                    name="sex"
                    type="radio"
                    value="male"
                  >
                    <Connect(Field)
                      component="input"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      name="sex"
                      type="radio"
                      value="male"
                    >
                      <Field
                        actions={
                          Object {
                            "arrayPush": [Function],
                            "blur": [Function],
                            "change": [Function],
                            "changeSubmitted": [Function],
                            "focus": [Function],
                            "registerField": [Function],
                            "registerForm": [Function],
                            "removeField": [Function],
                            "removeForm": [Function],
                            "resetForm": [Function],
                            "setInitialValues": [Function],
                            "updateFormState": [Function],
                            "updateValidateAndWarningMessages": [Function],
                            "updateValidateMessage": [Function],
                            "updateValidateMessages": [Function],
                            "updateWarningMessage": [Function],
                            "updateWarningMessages": [Function],
                          }
                        }
                        component="input"
                        fieldArrayContext={Object {}}
                        formContext={
                          Object {
                            "destroyOnUnmount": true,
                            "form": "simple",
                            "updateValidateAndWarnMap": [Function],
                          }
                        }
                        formSectionContext={
                          Object {
                            "name": "",
                          }
                        }
                        formState={
                          Object {
                            "form": Object {
                              "activeField": "",
                              "blurred": false,
                              "changed": false,
                              "errorsMap": Object {},
                              "focused": false,
                              "hasErrors": false,
                              "hasWarnings": false,
                              "submitted": false,
                              "warningsMap": Object {},
                            },
                            "meta": Object {
                              "email": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "employed": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "favoriteColor": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "firstName": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "lastName": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "notes": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "sex": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                            },
                            "values": Object {
                              "email": undefined,
                              "employed": undefined,
                              "favoriteColor": undefined,
                              "firstName": undefined,
                              "lastName": undefined,
                              "notes": undefined,
                              "sex": undefined,
                            },
                          }
                        }
                        name="sex"
                        ownProps={
                          Object {
                            "name": "sex",
                            "type": "radio",
                            "value": "male",
                          }
                        }
                      >
                        <input
                          name="sex"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="radio"
                          value=""
                        />
                      </Field>
                    </Connect(Field)>
                  </FieldWithContext>
                   Male
                </label>
                <label>
                  <FieldWithContext
                    component="input"
                    name="sex"
                    type="radio"
                    value="female"
                  >
                    <Connect(Field)
                      component="input"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      name="sex"
                      type="radio"
                      value="female"
                    >
                      <Field
                        actions={
                          Object {
                            "arrayPush": [Function],
                            "blur": [Function],
                            "change": [Function],
                            "changeSubmitted": [Function],
                            "focus": [Function],
                            "registerField": [Function],
                            "registerForm": [Function],
                            "removeField": [Function],
                            "removeForm": [Function],
                            "resetForm": [Function],
                            "setInitialValues": [Function],
                            "updateFormState": [Function],
                            "updateValidateAndWarningMessages": [Function],
                            "updateValidateMessage": [Function],
                            "updateValidateMessages": [Function],
                            "updateWarningMessage": [Function],
                            "updateWarningMessages": [Function],
                          }
                        }
                        component="input"
                        fieldArrayContext={Object {}}
                        formContext={
                          Object {
                            "destroyOnUnmount": true,
                            "form": "simple",
                            "updateValidateAndWarnMap": [Function],
                          }
                        }
                        formSectionContext={
                          Object {
                            "name": "",
                          }
                        }
                        formState={
                          Object {
                            "form": Object {
                              "activeField": "",
                              "blurred": false,
                              "changed": false,
                              "errorsMap": Object {},
                              "focused": false,
                              "hasErrors": false,
                              "hasWarnings": false,
                              "submitted": false,
                              "warningsMap": Object {},
                            },
                            "meta": Object {
                              "email": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "employed": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "favoriteColor": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "firstName": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "lastName": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "notes": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                              "sex": Object {
                                "active": false,
                                "blurred": false,
                                "changed": false,
                                "error": "",
                                "focused": false,
                                "warning": "",
                              },
                            },
                            "values": Object {
                              "email": undefined,
                              "employed": undefined,
                              "favoriteColor": undefined,
                              "firstName": undefined,
                              "lastName": undefined,
                              "notes": undefined,
                              "sex": undefined,
                            },
                          }
                        }
                        name="sex"
                        ownProps={
                          Object {
                            "name": "sex",
                            "type": "radio",
                            "value": "female",
                          }
                        }
                      >
                        <input
                          name="sex"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="radio"
                          value=""
                        />
                      </Field>
                    </Connect(Field)>
                  </FieldWithContext>
                   Female
                </label>
              </div>
            </div>
            <div>
              <label>
                Favorite Color
              </label>
              <div>
                <FieldWithContext
                  component="select"
                  name="favoriteColor"
                >
                  <Connect(Field)
                    component="select"
                    fieldArrayContext={Object {}}
                    formContext={
                      Object {
                        "destroyOnUnmount": true,
                        "form": "simple",
                        "updateValidateAndWarnMap": [Function],
                      }
                    }
                    formSectionContext={
                      Object {
                        "name": "",
                      }
                    }
                    name="favoriteColor"
                  >
                    <Field
                      actions={
                        Object {
                          "arrayPush": [Function],
                          "blur": [Function],
                          "change": [Function],
                          "changeSubmitted": [Function],
                          "focus": [Function],
                          "registerField": [Function],
                          "registerForm": [Function],
                          "removeField": [Function],
                          "removeForm": [Function],
                          "resetForm": [Function],
                          "setInitialValues": [Function],
                          "updateFormState": [Function],
                          "updateValidateAndWarningMessages": [Function],
                          "updateValidateMessage": [Function],
                          "updateValidateMessages": [Function],
                          "updateWarningMessage": [Function],
                          "updateWarningMessages": [Function],
                        }
                      }
                      component="select"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      formState={
                        Object {
                          "form": Object {
                            "activeField": "",
                            "blurred": false,
                            "changed": false,
                            "errorsMap": Object {},
                            "focused": false,
                            "hasErrors": false,
                            "hasWarnings": false,
                            "submitted": false,
                            "warningsMap": Object {},
                          },
                          "meta": Object {
                            "email": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "employed": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "favoriteColor": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "firstName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "lastName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "notes": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "sex": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                          },
                          "values": Object {
                            "email": undefined,
                            "employed": undefined,
                            "favoriteColor": undefined,
                            "firstName": undefined,
                            "lastName": undefined,
                            "notes": undefined,
                            "sex": undefined,
                          },
                        }
                      }
                      name="favoriteColor"
                      ownProps={
                        Object {
                          "children": Array [
                            <option />,
                            <option
                              value="ff0000"
                            >
                              Red
                            </option>,
                            <option
                              value="00ff00"
                            >
                              Green
                            </option>,
                            <option
                              value="0000ff"
                            >
                              Blue
                            </option>,
                          ],
                          "name": "favoriteColor",
                        }
                      }
                    >
                      <select
                        name="favoriteColor"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        value=""
                      >
                        <option />
                        <option
                          value="ff0000"
                        >
                          Red
                        </option>
                        <option
                          value="00ff00"
                        >
                          Green
                        </option>
                        <option
                          value="0000ff"
                        >
                          Blue
                        </option>
                      </select>
                    </Field>
                  </Connect(Field)>
                </FieldWithContext>
              </div>
            </div>
            <div>
              <label
                htmlFor="employed"
              >
                Employed
              </label>
              <div>
                <FieldWithContext
                  component="input"
                  id="employed"
                  name="employed"
                  type="checkbox"
                >
                  <Connect(Field)
                    component="input"
                    fieldArrayContext={Object {}}
                    formContext={
                      Object {
                        "destroyOnUnmount": true,
                        "form": "simple",
                        "updateValidateAndWarnMap": [Function],
                      }
                    }
                    formSectionContext={
                      Object {
                        "name": "",
                      }
                    }
                    id="employed"
                    name="employed"
                    type="checkbox"
                  >
                    <Field
                      actions={
                        Object {
                          "arrayPush": [Function],
                          "blur": [Function],
                          "change": [Function],
                          "changeSubmitted": [Function],
                          "focus": [Function],
                          "registerField": [Function],
                          "registerForm": [Function],
                          "removeField": [Function],
                          "removeForm": [Function],
                          "resetForm": [Function],
                          "setInitialValues": [Function],
                          "updateFormState": [Function],
                          "updateValidateAndWarningMessages": [Function],
                          "updateValidateMessage": [Function],
                          "updateValidateMessages": [Function],
                          "updateWarningMessage": [Function],
                          "updateWarningMessages": [Function],
                        }
                      }
                      component="input"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      formState={
                        Object {
                          "form": Object {
                            "activeField": "",
                            "blurred": false,
                            "changed": false,
                            "errorsMap": Object {},
                            "focused": false,
                            "hasErrors": false,
                            "hasWarnings": false,
                            "submitted": false,
                            "warningsMap": Object {},
                          },
                          "meta": Object {
                            "email": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "employed": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "favoriteColor": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "firstName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "lastName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "notes": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "sex": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                          },
                          "values": Object {
                            "email": undefined,
                            "employed": undefined,
                            "favoriteColor": undefined,
                            "firstName": undefined,
                            "lastName": undefined,
                            "notes": undefined,
                            "sex": undefined,
                          },
                        }
                      }
                      name="employed"
                      ownProps={
                        Object {
                          "id": "employed",
                          "name": "employed",
                          "type": "checkbox",
                        }
                      }
                    >
                      <input
                        id="employed"
                        name="employed"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        type="checkbox"
                        value=""
                      />
                    </Field>
                  </Connect(Field)>
                </FieldWithContext>
              </div>
            </div>
            <div>
              <label>
                Notes
              </label>
              <div>
                <FieldWithContext
                  component="textarea"
                  name="notes"
                >
                  <Connect(Field)
                    component="textarea"
                    fieldArrayContext={Object {}}
                    formContext={
                      Object {
                        "destroyOnUnmount": true,
                        "form": "simple",
                        "updateValidateAndWarnMap": [Function],
                      }
                    }
                    formSectionContext={
                      Object {
                        "name": "",
                      }
                    }
                    name="notes"
                  >
                    <Field
                      actions={
                        Object {
                          "arrayPush": [Function],
                          "blur": [Function],
                          "change": [Function],
                          "changeSubmitted": [Function],
                          "focus": [Function],
                          "registerField": [Function],
                          "registerForm": [Function],
                          "removeField": [Function],
                          "removeForm": [Function],
                          "resetForm": [Function],
                          "setInitialValues": [Function],
                          "updateFormState": [Function],
                          "updateValidateAndWarningMessages": [Function],
                          "updateValidateMessage": [Function],
                          "updateValidateMessages": [Function],
                          "updateWarningMessage": [Function],
                          "updateWarningMessages": [Function],
                        }
                      }
                      component="textarea"
                      fieldArrayContext={Object {}}
                      formContext={
                        Object {
                          "destroyOnUnmount": true,
                          "form": "simple",
                          "updateValidateAndWarnMap": [Function],
                        }
                      }
                      formSectionContext={
                        Object {
                          "name": "",
                        }
                      }
                      formState={
                        Object {
                          "form": Object {
                            "activeField": "",
                            "blurred": false,
                            "changed": false,
                            "errorsMap": Object {},
                            "focused": false,
                            "hasErrors": false,
                            "hasWarnings": false,
                            "submitted": false,
                            "warningsMap": Object {},
                          },
                          "meta": Object {
                            "email": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "employed": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "favoriteColor": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "firstName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "lastName": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "notes": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                            "sex": Object {
                              "active": false,
                              "blurred": false,
                              "changed": false,
                              "error": "",
                              "focused": false,
                              "warning": "",
                            },
                          },
                          "values": Object {
                            "email": undefined,
                            "employed": undefined,
                            "favoriteColor": undefined,
                            "firstName": undefined,
                            "lastName": undefined,
                            "notes": undefined,
                            "sex": undefined,
                          },
                        }
                      }
                      name="notes"
                      ownProps={
                        Object {
                          "name": "notes",
                        }
                      }
                    >
                      <textarea
                        name="notes"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        value=""
                      />
                    </Field>
                  </Connect(Field)>
                </FieldWithContext>
              </div>
            </div>
            <div>
              <button
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </SimpleForm>
      </ReduxFormClass>
    </ReduxForm>
  </Connect(ReduxForm)>
</Provider>
`;

exports[`<SimpleForm /> onSubmit 1`] = `
Array [
  Array [
    Object {
      "actions": Object {
        "arrayPush": [Function],
        "blur": [Function],
        "change": [Function],
        "changeSubmitted": [Function],
        "focus": [Function],
        "registerField": [Function],
        "registerForm": [Function],
        "removeField": [Function],
        "removeForm": [Function],
        "resetForm": [Function],
        "setInitialValues": [Function],
        "updateFormState": [Function],
        "updateValidateAndWarningMessages": [Function],
        "updateValidateMessage": [Function],
        "updateValidateMessages": [Function],
        "updateWarningMessage": [Function],
        "updateWarningMessages": [Function],
      },
      "state": Object {
        "form": Object {
          "activeField": "",
          "blurred": false,
          "changed": false,
          "errorsMap": Object {},
          "focused": false,
          "hasErrors": false,
          "hasWarnings": false,
          "submitted": true,
          "warningsMap": Object {},
        },
        "meta": Object {
          "email": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "employed": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "favoriteColor": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "firstName": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "lastName": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "notes": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
          "sex": Object {
            "active": false,
            "blurred": false,
            "changed": false,
            "error": "",
            "focused": false,
            "warning": "",
          },
        },
        "values": Object {
          "email": undefined,
          "employed": undefined,
          "favoriteColor": undefined,
          "firstName": undefined,
          "lastName": undefined,
          "notes": undefined,
          "sex": undefined,
        },
      },
      "values": Object {
        "email": undefined,
        "employed": undefined,
        "favoriteColor": undefined,
        "firstName": undefined,
        "lastName": undefined,
        "notes": undefined,
        "sex": undefined,
      },
      "wizard": undefined,
    },
  ],
]
`;
